cambio de imagenes

--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -12,7 +12,7 @@
     </header>
 
         <div id="DivMenu">
-            <a href="#piedefoto">ir al footer</a>
+           <!-- <a href="#piedefoto">ir al footer</a>-->
             <a id="menu" href="About.html">Biografia</a>
             <a id="menu" href="Portafolio.html">Portafolio</a>
             <a id="menu" href="Contactos.html">Contactos</a>
