Cambios de estilo

--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -10,14 +10,12 @@
     <header>
         <h1 id="TitulosCabecera">Angel G. Acosta R.</h1>
     </header>
-
         <div id="DivMenu">
            <!-- <a href="#piedefoto">ir al footer</a>-->
-            <a id="menu" href="About.html">Biografia</a>
-            <a id="menu" href="Portafolio.html">Portafolio</a>
-            <a id="menu" href="Contactos.html">Contactos</a>
+            <a class="OpcionesMenu" href="About.html">Biografia</a>
+            <a class="OpcionesMenu" href="Portafolio.html">Portafolio</a>
+            <a class="OpcionesMenu" href="Contactos.html">Contactos</a>
         </div>
-
         <div class="container">
             <ul class="slider">
                 <li id="slider1">
@@ -30,7 +28,6 @@
                     <img src="../img/img3.JPG" alt="">
                 </li>
             </ul>
-            
             <ul class="menu">
                 <li>
                     <a href="#slider1">1</a>
